// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> should render Divider within flex container 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="box"
  >
    <div
      class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 jfizlv jvaPlR"
      data-blade-component="divider"
    />
  </div>
</div>
`;

exports[`<Divider /> should render horizontal Divider using width 1`] = `
<div>
  <div
    class="BaseBox-bmPWx hzdKuN"
    data-blade-component="box"
  >
    <div
      class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 gOvuTU eDIlme"
      data-blade-component="divider"
    />
  </div>
</div>
`;

exports[`<Divider /> should render vertical Divider using height 1`] = `
<div>
  <div
    class="BaseBox-bmPWx fQoxyE"
    data-blade-component="box"
  >
    <div
      class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 bixfEx jYGBuO"
      data-blade-component="divider"
    />
  </div>
</div>
`;
